--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "tesseract.js": "^6.0.1"
+    "cohere-ai": "^7.17.1",
+    "highlight.js": "^11.11.1",
+    "marked-highlight": "^2.2.1"
   },
   "devDependencies": {
     "vite": "^6.3.2",
